Add option to Restart SystemUI to DevSettings
Change-Id: I1dd55510a878198f245ff90c011717ac5fb65f93

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -537,4 +537,7 @@
     <string name="selinux_permissive_title">Permissive</string>
     <string name="selinux_enforcing_title">Enforcing</string>
 
+    <!-- Restart SystemUI -->
+    <string name="restart_systemui">Restart SystemUI</string>
+
 </resources>
