suquash Settings: add user configurable lockscreen shortcuts (2/2)
Settings: fix some icons (2/3)

Conflicts:
	res/drawable-hdpi/ic_settings_privacy_guard.png
	res/drawable-hdpi/ic_settings_reset.png
	res/drawable-mdpi/ic_settings_privacy_guard.png
	res/drawable-mdpi/ic_settings_reset.png
	res/drawable-xhdpi/ic_settings_privacy_guard.png
	res/drawable-xhdpi/ic_settings_reset.png
	res/drawable-xxhdpi/ic_settings_privacy_guard.png
	res/drawable-xxhdpi/ic_settings_reset.png

Conflicts:
	res/drawable-hdpi/ic_action_set.png
	res/drawable-hdpi/ic_settings_interface.png
	res/drawable-mdpi/ic_action_set.png
	res/drawable-mdpi/ic_settings_interface.png
	res/drawable-xhdpi/ic_action_set.png
	res/drawable-xhdpi/ic_settings_interface.png
	res/drawable-xxhdpi/ic_action_set.png
	res/drawable-xxhdpi/ic_settings_interface.png

Settings: add back button in actionbar on Status settings

for more consistence. We add it as drawable due that we still have 3 other
places in settings where it is missing.

We will change later....after that we should have worked every inconsistence out.

Conflicts:
	src/com/android/settings/deviceinfo/Status.java

Settings: add central slim ActionListViewSettings class back...

as well shortcutpicker helper and several other stuff which is needed
for nearly every feature we have regarding navigation or shortcuts.

Imported from kk

changes:
- Renaming to be inline with fwb part
- code cleanup
- disabled code where features are not present till now

NOTE: This patch from graphics group is needed as well
      https://gerrit.slimroms.net/#/c/19987/2

Conflicts:
	res/values/cm_arrays.xml
	res/values/slim_strings.xml

Settings: materialize grabber icon

Settings: add a default slim actions array

Settings: add default slim actions for screen off gestures

add dslv controller

a lot of our settings have drag swipe features
this is the central controller for it to have
easy access...

Conflicts:
	res/values/attrs.xml

Settings: Materialize DSLV

Settings: its no

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="red">#F00</color>
 
     <color name="material_empty_color_light">#FFCED7DB</color>
+    <color name="actionbar_icon_color">#ffffff</color>
 
     <color name="memory_used">#F00</color>
     <color name="memory_avail">@color/material_empty_color_light</color>
@@ -79,5 +80,9 @@
 
     <color name="wifi_divider">#ffe0e0e0</color>
     <color name="sim_noitification">@*android:color/material_deep_teal_500</color>
+
+    <!-- DSLV colors -->
+    <color name="dslv_icon_dark">#ff009688</color>
+    <color name="dslv_float_cackground_color">#ffe1e1e0</color>
 
 </resources>
