Lock screen: Weather panel, (WIP), (2/2)
Conflicts:
	AndroidManifest.xml
	res/values-de/dk_strings.xml
	res/values/dk_strings.xml
	res/xml/dashboard_categories.xml
	src/com/android/settings/SettingsActivity.java

Change-Id: Ic0be544a3034e13bcf628bbf1a9cd4623124f99f

--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -124,6 +124,14 @@
                 android:icon="@drawable/ic_settings_notifications"
                 />
 
+   <!-- Lock screen -->
+        <dashboard-tile
+            android:id="@+id/lock_screen"
+            android:title="@string/lock_screen_title"
+            android:fragment="com.android.settings.darkkat.LockScreen"
+            android:icon="@drawable/ic_settings_lockscreen"
+            />
+
         <!-- Lock screen -->
         <dashboard-tile
                 android:id="@+id/lockscreen_settings"
