[5/5] Breathing missedcall/sms/voicemail
Also includes
temasek's fixes from
https://github.com/temasek/android_packages_apps_Settings/commit/
b79228865e03f8dd60d692f7aa954c092a1c1b67

-picked from DU

Change-Id: I6de50779d2dbd917e1c3f5e09a023559bb30b9db

--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -126,6 +126,12 @@
             android:summary="@string/status_bar_toggle_brightness_summary"
             android:defaultValue="false" />
 
+        <Preference
+            android:key="breathing_notifications"
+            android:fragment="com.android.settings.euphoria.BreathingNotifications"
+            android:layout="@layout/preference_breathe"
+            android:title="@string/breathing_notifications_title" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
