--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -126,6 +126,11 @@
             android:summary="@string/status_bar_toggle_brightness_summary"
             android:defaultValue="false" />
 
+        <Preference
+            android:key="breathing_notifications"
+            android:fragment="com.android.settings.euphoria.BreathingNotifications"
+            android:title="@string/breathing_notifications_title" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
